--- a/WindowsFormsApplication1/OauthLiveDesktop.csproj
+++ b/WindowsFormsApplication1/OauthLiveDesktop.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Json">
       <HintPath>..\packages\System.Json.4.0.20126.16343\lib\net40\System.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
